Archive2/7b/5a10866f2bdfaf/output
main.cpp: In constructor 'Der::Der(const char*)':
main.cpp:17:37: error: no matching function for call to 'Base::Base(<brace-enclosed initializer list>)'
     Der(const char* c):S{c}, Base{ss} {} 
                                     ^
main.cpp:17:37: note: candidates are:
main.cpp:12:5: note: Base::Base(const char*)
     Base(const char* _c):c{_c} {} 
     ^
main.cpp:12:5: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'const char*'
main.cpp:10:8: note: constexpr Base::Base(const Base&)
 struct Base{ 
        ^
main.cpp:10:8: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'const Base&'
main.cpp:10:8: note: constexpr Base::Base(Base&&)
main.cpp:10:8: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'Base&&'
